Avoid hover effect; looks poor on mobile

--- a/app/css/custom.css
+++ b/app/css/custom.css
@@ -26,6 +26,12 @@
   margin: 0 auto;
 }
 
+#reset-score,
+.numeric-keypad .btn {
+  --bs-btn-hover-color: var(--bs-btn-color);
+  --bs-btn-hover-bg: var(--bs-btn-bg);
+}
+
 .keypad-row {
   display: flex;
   justify-content: center;
@@ -42,6 +48,10 @@
   justify-content: center;
   padding: 0;
   border-radius: 0.5rem;
+}
+
+#enter-or-next-button {
+  font-size: 28px;
 }
 
 .keypad-btn.keypad-double-btn {
